<be.gitesdewallonie.allochambresdhotes.KeyboardDetectorRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="@dimen/main_logo"
                    android:layout_height="@dimen/main_logo"
                    android:paddingTop="20dp"
                    android:src="@drawable/main_logo" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:background="@drawable/blue_button"
                    android:text="@string/geolocation_me"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_bg"
                    android:ems="10"
                    android:hint="@string/address"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:singleLine="true" >
                </EditText>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:background="@drawable/blue_button"
                    android:text="@string/search"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bar"
                    android:gravity="right" >

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/blue_button"
                        android:text="Credits"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backrepeat"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_logo1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:src="@drawable/logo1" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/credit1"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/img_logo2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/logo2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/credit2"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/img_logo3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/logo3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/credit3"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</be.gitesdewallonie.allochambresdhotes.KeyboardDetectorRelativeLayout>